// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load/saveAllServers 1`] = `
"{
  "home": {
    "ctor": "Server",
    "data": {
      "contracts": [],
      "cpuCores": 1,
      "ftpPortOpen": false,
      "hasAdminRights": true,
      "hostname": "home",
      "httpPortOpen": false,
      "ip": "67.4.8.1",
      "isConnectedTo": true,
      "maxRam": 8,
      "messages": [
        "hackers-starting-handbook.lit"
      ],
      "organizationName": "Home PC",
      "programs": [
        "NUKE.exe"
      ],
      "scripts": {
        "ctor": "JSONMap",
        "data": [
          [
            "script.js",
            {
              "ctor": "Script",
              "data": {
                "code": "/** @param {NS} ns */\\nexport async function main(ns) {\\n  return ns.asleep(1000000);\\n}",
                "filename": "script.js",
                "server": "home",
                "metadata": {
                  "ctor": "FileMetadata",
                  "data": {
                    "atime": 123456789000,
                    "mtime": 123456789000,
                    "btime": 123456789000
                  }
                }
              }
            }
          ]
        ]
      },
      "serversOnNetwork": [],
      "smtpPortOpen": false,
      "sqlPortOpen": false,
      "sshPortOpen": false,
      "textFiles": {
        "ctor": "JSONMap",
        "data": []
      },
      "purchasedByPlayer": true,
      "backdoorInstalled": false,
      "baseDifficulty": 1,
      "hackDifficulty": 1,
      "minDifficulty": 1,
      "moneyAvailable": 0,
      "moneyMax": 0,
      "numOpenPortsRequired": 5,
      "openPortCount": 0,
      "requiredHackingSkill": 1,
      "serverGrowth": 1,
      "runningScripts": [
        {
          "ctor": "RunningScript",
          "data": {
            "args": [],
            "dataMap": {},
            "filename": "script.js",
            "offlineExpGained": 0,
            "offlineMoneyMade": 0,
            "offlineRunningTime": 123456789.01,
            "onlineExpGained": 0,
            "onlineMoneyMade": 0,
            "onlineRunningTime": 7.210000000000004,
            "ramUsage": 1.6,
            "server": "home",
            "scriptKey": "script.js*[]",
            "title": "Awesome Script",
            "threads": 1,
            "temporary": false
          }
        }
      ]
    }
  }
}"
`;

exports[`load/saveAllServers pruning RunningScripts 1`] = `
"{
  "home": {
    "ctor": "Server",
    "data": {
      "contracts": [],
      "cpuCores": 1,
      "ftpPortOpen": false,
      "hasAdminRights": true,
      "hostname": "home",
      "httpPortOpen": false,
      "ip": "67.4.8.1",
      "isConnectedTo": true,
      "maxRam": 8,
      "messages": [
        "hackers-starting-handbook.lit"
      ],
      "organizationName": "Home PC",
      "programs": [
        "NUKE.exe"
      ],
      "scripts": {
        "ctor": "JSONMap",
        "data": [
          [
            "script.js",
            {
              "ctor": "Script",
              "data": {
                "code": "/** @param {NS} ns */\\nexport async function main(ns) {\\n  return ns.asleep(1000000);\\n}",
                "filename": "script.js",
                "server": "home",
                "metadata": {
                  "ctor": "FileMetadata",
                  "data": {
                    "atime": 123456789000,
                    "mtime": 123456789000,
                    "btime": 123456789000
                  }
                }
              }
            }
          ]
        ]
      },
      "serversOnNetwork": [],
      "smtpPortOpen": false,
      "sqlPortOpen": false,
      "sshPortOpen": false,
      "textFiles": {
        "ctor": "JSONMap",
        "data": []
      },
      "purchasedByPlayer": true,
      "backdoorInstalled": false,
      "baseDifficulty": 1,
      "hackDifficulty": 1,
      "minDifficulty": 1,
      "moneyAvailable": 0,
      "moneyMax": 0,
      "numOpenPortsRequired": 5,
      "openPortCount": 0,
      "requiredHackingSkill": 1,
      "serverGrowth": 1,
      "runningScripts": []
    }
  }
}"
`;
